Archive2/fa/a8be0dd31bb016/output
main.cpp: In member function ‘const ValueType& stUnalignedContainer<ValueType>::operator[](short unsigned int) const’:
main.cpp:42:32: error: ‘m_data’ was not declared in this scope
   return *((const ValueType*) &m_data[ n * parent_type::m_dataSize ]);
                                ^
